EmptyObjects remove Java 9 warning